--- a/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/index.html
+++ b/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/index.html
@@ -60,16 +60,16 @@
                 </div>
             </nav>
         </div>
-        <div class = "row">
+        <div class ="row">
             <h2>Welcome, {{user.first_name}}! Today you should eat {{daily}} calories!</h2>
             <h1>{{errors}}</h1>
         </div>
         <div class="row">
-            <div class=".col-md-6">
+            <div >
                 <h3>{{calsofar}} Calories Consumed Today</h3>
                 <h3>{{calleft}} Calories To Go</h3>
             </div>
-            <div class=".col-md-6">
+            <div >
                 <div class="progress">
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:{{calpercent}}%">
                     </div>
