--- a/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/analysis.html
+++ b/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/analysis.html
@@ -2,12 +2,15 @@
 <html>
 <head>
 	<title>Analysis Page</title>
+		{% load static %}
   	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.js"></script>
+  	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+  	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.js"></script>
+  	<link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
 </head>
 <body>
   	<div class="container">
@@ -40,39 +43,12 @@
 
 			  <!-- Wrapper for slides -->
 			 	<div class="carousel-inner" role="listbox">
-				    <div class="item active">
-				      	<script type="text/javascript">
-							var myData = new Array(['Jan', 2], ['Feb', 1], ['Mar', 3], ['Apr', 6], ['May', 8], ['Jun', 10], ['Jul', 9], ['Aug', 8], ['Sep', 5], ['Oct', 6], ['Nov', 2], ['Dec', 4]);
-							var colors = ['#FFCC00', '#FFFF00', '#CCFF00', '#99FF00', '#33FF00', '#00FF66', '#00FF99', '#00FFCC', '#FF0000', '#FF3300', '#FF6600', '#FF9900'];
-							var myChart = new JSChart('chartid', 'pie');
-								myChart.setDataArray(myData);
-									myChart.colorizePie(colors);
-									myChart.setPiePosition(308, 170);
-									myChart.setPieRadius(95);
-									myChart.setPieUnitsFontSize(8);
-									myChart.setPieUnitsColor('#474747');
-									myChart.setPieValuesColor('#474747');
-									myChart.setPieValuesOffset(-10);
-									myChart.setTitleColor('#fff');
-									myChart.setSize(616, 321);
-									myChart.setBackgroundImage('path/background.jpg');
-								myChart.draw();
-				      	</script>
-				    </div>
+				   
 
 				    <div class="item">
-				      	<img src="http://www.aspca.org/sites/default/files/cat-care_urine-marking_main-image.jpg" alt="Chania">
-				    </div>
-
-				    <div class="item">
-				      	<img src="http://www.jeremynoeljohnson.com/wp-content/uploads/2014/06/crazy_cat_4.jpg" alt="Flower">
-				    </div>
-
-				     <div class="item">
-				      	<img src="https://pbs.twimg.com/media/Cf8-vKXVAAA5qRR.jpg" alt="Flower">
+				      	<img src="{% static 'img/cat1.jpeg' %}" alt="Chania">
 				    </div>
 			  	</div>
-
 			  <!-- Left and right controls -->
 			  	<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
 			    	<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
