--- a/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/analysis.html
+++ b/apps/blueSquirrelsFitnessApp/templates/blueSquirrelsFitnessApp/analysis.html
@@ -2,14 +2,17 @@
 <html>
 <head>
 	<title>Analysis Page</title>
+	{% load staticfiles %}
   	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
+  	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   	<script src="http://code.highcharts.com/highcharts.js"></script>
   	{% load chartit %}
-  	{{ calchart|load_charts:"cals" }}
+  	{{ charts|load_charts:"cals, prot, carbs, lips" }}
+
 </head>
 <body>
   	<div class="container">
@@ -45,18 +48,18 @@
 				    	<div id="cals">
 				    	</div>
 				    </div>
-				    <div class="item ">
+				    <div class="item" id="iprot">
 				    	<div id="prot">
 				    	</div>
 				    </div>
 
-				    <div class="item">
-				      	<div class="carbs">
+				    <div class="item" id="icarb">
+				      	<div id="carbs">
 				      	</div>
 				    </div>
 
-				     <div class="item">
-				      	<div class="lips">
+				     <div class="item" id="ilip">
+				      	<div id="lips">
 				      	</div>
 				    </div>
 			  	</div>
